samples/_failures_safe/1761002206_951ab9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f6f6f63.c: In function ‘bfs’:
./samples/SAFE/__tmp_0f6f6f63.c:180:13: error: expected identifier at end of input
  180 |             start = graph->
      |             ^~~~~
./samples/SAFE/__tmp_0f6f6f63.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f6f6f63.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f6f6f63.c:180:13: error: expected declaration or statement at end of input
